# PulseGlobe

./: .env.example  .gitignore  Readme.md  pyproject.toml
MCP/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.bat  start_uv.bat
MCP/.openmcp/: connection.json  tabs.pulseglobe-social-search.json  tabs.untitle.json
MCP/docs/: OPENMCP_GUIDE.md  TOOLS_API.md
MCP/src/: __init__.py  config.py  server.py
MCP/src/utils/: tikhub_client.py
MCP/tests/: test_tikhub_client.py
config/: models.yaml  settings.yaml
docs/: a2a_architecture.md  data_preparation_guide.md  implementation_plan.md
pulseglobe/: __init__.py  config.py
pulseglobe/agents/: __init__.py  collection_orchestrator.py  orchestrator.py  prompts.py  state.py
pulseglobe/agents/collectors/: __init__.py  base.py  rag_collector.py  social_collector.py  tavily_collector.py
pulseglobe/agents/workers/: __init__.py  base.py  rag_worker.py  social_worker.py  tavily_worker.py
pulseglobe/core/: __init__.py  config.py
pulseglobe/models/: __init__.py  data_packet.py
pulseglobe/services/: __init__.py  llm.py  storage.py  summarization.py  translation.py
scripts/: create_mn_zh_table.sql  translate_mn_news.py  vectorize_news.py
sql/: README.md  create_data_packets.sql  create_vector_index.sql  migrate_simple.sql  migrate_to_pulseglobe.sql
tests/: __init__.py  test_collection.py  test_orchestrator.py  test_workers.py
