[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulseglobe-mcp"
version = "0.1.0"
description = "Social media sentiment search MCP server powered by TikHub API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0"
]

[project.scripts]
pulseglobe-mcp = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]
